version/0.27/_sources/api/solver/_autosummary/settings/contour_child.rst.txt
:orphan:

.. _contour_child:

contour_child
=============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.contour_child
    :show-inheritance:

.. rubric:: Attributes

==============================================   ==========================================================================================================

Attribute                                                                                                                                           Summary

==============================================   ==========================================================================================================
:ref:`name <name_17>`                                                                                                         Specify a name for an object.

:ref:`field <field_2>`                                                          Contains a list from which you can select the scalar field to be contoured.

:ref:`surfaces_list <surfaces_list>`                                                     Select the planar surface(s) where you want the results displayed.

:ref:`range_option <range_option>`                            Specify whether you want the range to be Global, Local to the selected surface(s), or Custom.

:ref:`range_options <range_options>`                                                                                Choose range using the min max options.

:ref:`options <options_14>`                                                                                        Contains options for the contour object.

:ref:`filled <filled_1>`                                                                                 Toggles between filled contours and line contours.

:ref:`node_values <node_values>`                         Toggles between using scalar field values at nodes and at cell centers for computing the contours.

:ref:`boundary_values <boundary_values>`             Enabling overwrites the node values (on boundaries) with a simple average of the boundary face values.

:ref:`contour_lines <contour_lines>`                                                                           Combines filled contours with line contours.

:ref:`coloring <coloring_1>`                                                                                             Specifies how the contours appear.

:ref:`colorings <colorings>`                                                                                             Specifies how the contours appear.

:ref:`color_map <color_map>`                                                                                      Choose coloring using the colormap panel.

:ref:`annotations_list <annotations_list>`                                               Select the annotation objects to be added to this graphics object.

:ref:`draw_mesh <draw_mesh_1>`                                            Select whether you would like to display the mesh alongside your graphics object.

:ref:`mesh_object <mesh_object>`                                                                                    Select properties for your mesh object.

:ref:`display_state_name <display_state_name>`                                                                    Display state settings selection by name.

:ref:`physics <physics_1>`                                                                                                                 'physics' child.

:ref:`geometry <geometry_7>`                                                                                                              'geometry' child.

:ref:`surfaces <surfaces_4>`                                                                                                              'surfaces' child.

:ref:`deformation <deformation>`                                                                                                       'deformation' child.

:ref:`deformation_scale <deformation_scale>`                                                                                     'deformation_scale' child.

==============================================   ==========================================================================================================

.. rubric:: Methods

==========================   ======================

Method                                      Summary

==========================   ======================
:ref:`display <display_3>`       'display' command.

==========================   ======================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`contour <contour>`       'contour' child.

========================   ====================

